Fix query and header case sensitity according to RFC compliance (#589)
Co-authored-by: Claude <noreply@anthropic.com>
Co-authored-by: Sculptor <sculptor@imbue.com>